# Dashboard

./: .gitignore  pyproject.toml  start.sh
infra/docker/: Makefile  docker-compose.yaml
infra/docker/clickhouse/init/: 001_silver.sql  010_gold.sql
src/myproj/: definitions.py
src/myproj/assets/: bronze_journal.py  bronze_multicol.py  dims.py  gold_journal.py  silver_journal.py
src/myproj/resources/: clickhouse_io.py  local_store.py  minio_io.py  parquet_io.py
src/myproj/sensors/: dashboard_sensor.py  journal_sensor.py  multicol_sensor.py
src/myproj/utils/: ch_types.py  dashboard_functions.py  debug.py  journal_parse.py
