[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.47",
    "clickhouse-connect>=0.11.0",
    "dagster>=1.12.14",
    "dagster-webserver>=1.12.14",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
]
